adding matrix opt, youtube feature for backprop, link to defense slides

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                   <a href="data/SunilPai_CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=orRndBUAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://x.com/sunilkpai?lang=en">X/Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/sunilkpai">Github</a>
+                  <a href="https://github.com/sunilkpai">Github</a> &nbsp;/&nbsp;
+                  <a href="https://sunilkpai.github.io/defense/">Defense Slides</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -74,7 +75,7 @@
         </script>
       </td>
       <td style="padding:20px;width:75%;vertical-align:middle">
-        <a href="https://cat3d.github.io/">
+        <a href="https://www.science.org/doi/10.1126/science.ade8450">
 			<span class="papertitle">Experimentally realized in situ backpropagation for deep learning in photonic neural networks
 
 </span>
@@ -109,6 +110,10 @@
         <a href="https://arxiv.org/abs/2205.08501">arXiv</a>
         /
         <a href="https://zenodo.org/records/7513236">zenodo</a>
+        /
+        <a href="https://techfinder.stanford.edu/technology/efficient-analog-backpropagation-training-architecture-photonic-neural-networks">patent</a>
+        /
+        <a href="https://www.youtube.com/watch?v=IwzguEPIddU&ab_channel=AnastasiInTech">youtube feature</a>
         <p></p>
         <p>
 				The first ever demonstration of optical backpropagation in photonic neural networks, paving the way for a new future for machine learning and ultra-fast photonic device tuning.
@@ -117,7 +122,7 @@
     </tr>
 
 
-    <tr>
+    <tr bgcolor="#ffffd0">
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
           <img src='images/crypto.png' width=100%>
@@ -126,7 +131,7 @@
       <td style="padding:20px;width:75%;vertical-align:middle">
         <a href="https://opg.optica.org/optica/fulltext.cfm?uri=optica-10-5-552&id=530125">
           <span class="papertitle">Experimental evaluation of digitally verifiable photonic computing for blockchain and cryptocurrency
-</span>
+      </span>
         </a>
         <br>
 				<strong><a href="https://sunilkpai.github.io/">Sunil Pai</a></strong>,
@@ -156,6 +161,40 @@
         <p></p>
         <p>
         The first ever demonstration of cryptocurrency and hash function evaluation in a photonic circuit implementing our patented hash function LightHash.
+        </p>
+      </td>
+    </tr>
+
+
+    <tr bgcolor="#ffffd0">
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <div class="one">
+          <img src='images/matopt.gif' width=100%>
+        </div>
+      </td>
+      <td style="padding:20px;width:75%;vertical-align:middle">
+        <a href="https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.11.064044">
+          <span class="papertitle">Matrix Optimization on Universal Unitary Photonic Devices
+      </span>
+        </a>
+        <br>
+				<strong><a href="https://sunilkpai.github.io/">Sunil Pai</a></strong>,
+        <a href="https://www.linkedin.com/in/bencbartlett">Ben Bartlett</a>,
+        <a href="https://web.stanford.edu/~solgaard/index.html">Olav Solgaard</a>,
+        <a href="https://dabm.stanford.edu">David AB Miller</a>
+        <br>
+        <em>Phys Rev Applied</em>, 2019
+        <br>
+        <a href="https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.11.064044">paper</a>
+        /
+        <a href="https://arxiv.org/abs/1808.00458">arXiv</a>
+        /
+        <a href="https://av.tib.eu/series/520/photonic+optimization">visualizations</a>
+        /
+        <a href="https://github.com/solgaardlab/neurophox">code</a>
+        <p></p>
+        <p>
+        Exploring the matrix optimization of unitary networks for different sizes and architectures, relevant to both photonic circuits and machine learning applications.
         </p>
       </td>
     </tr>
