finishing the last fa paper

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Sunil Pai</title>
 
-    <meta name="author" content="Sunil Pai">
+    <meta name="author" content="Sunil Pai, PhD">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -50,10 +50,12 @@
                 </p>
                 <p></p>
             <h3>Defense Slides</h3>
-            <iframe src="https://sunilkpai.github.io/defense/" frameborder="0" width="800">
+            <iframe src="https://sunilkpai.github.io/defense/" frameborder="0" width="800" height="400">
             </iframe>
             <p></p>
+            <h3>First-Author Papers</h3>
               </td>
+              
             </tr>
           </tbody></table>
 
@@ -122,7 +124,7 @@
         <a href="https://www.youtube.com/watch?v=IwzguEPIddU&ab_channel=AnastasiInTech">youtube feature</a>
         <p></p>
         <p>
-				The first ever demonstration of optical backpropagation in photonic neural networks, paving the way for a new future for machine learning and ultra-fast photonic device tuning.
+				The first ever demonstration of optical backpropagation in photonic neural networks, paving the way for a new future for machine learning and ultra-fast photonic device error correction.
         </p>
       </td>
     </tr>
@@ -250,6 +252,66 @@
         <p></p>
         <p>
         A new calibration algorithm for tuning arbitrary feedforward photonic networks is based on reciprocity in physics.
+        </p>
+      </td>
+    </tr>
+
+    <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <div class="one">
+          <img src='images/powermonitoring.png' width=100%>
+        </div>
+      </td>
+      <td style="padding:20px;width:75%;vertical-align:middle">
+        <a href="https://www.degruyter.com/document/doi/10.1515/nanoph-2022-0527/html?lang=en">
+          <span class="papertitle">Power monitoring in a feedforward photonic network using two output detectors
+      </span>
+        </a>
+        <br>
+				<strong><a href="https://sunilkpai.github.io/">Sunil Pai</a></strong>,
+        <a href="https://www.linkedin.com/in/carson-valdez-aa21a31b9">Carson Valdez</a>,
+        <a href="https://linqs.stanford.edu/people/taewon-park">Taewon Park</a>, 
+        <a href="https://www.linkedin.com/in/maziyar-milanizadeh">Maziyar Milanizadeh</a>,
+        <a href="https://www.deib.polimi.it/eng/people/details/284362">Francesco Morichetti</a>,
+        <a href="https://www.deib.polimi.it/eng/people/details/271042">Andrea Melloni</a>,
+        <a href="https://shanhui.people.stanford.edu/">Shanhui Fan</a>,
+        <a href="https://web.stanford.edu/~solgaard/index.html">Olav Solgaard</a>,
+        <a href="https://dabm.stanford.edu">David AB Miller</a>
+        <br>
+        <em>Nanophotonics</em>, 2023
+        <br>
+        <a href="https://www.degruyter.com/document/doi/10.1515/nanoph-2022-0527/html?lang=en">paper</a>
+        <p></p>
+        <p>
+        A new algorithm for measuring power in photonic feedforward networks noninvasively using phase tuners instead of taps or measured scattered light.
+        </p>
+      </td>
+    </tr>
+
+
+    <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <div class="one">
+          <img src='images/binarytree.png' width=100%>
+        </div>
+      </td>
+      <td style="padding:20px;width:75%;vertical-align:middle">
+        <a href="https://arxiv.org/abs/2210.16935">
+          <span class="papertitle">Scalable and self-correcting photonic computation using balanced photonic binary tree cascades
+      </span>
+        </a>
+        <br>
+				<strong><a href="https://sunilkpai.github.io/">Sunil Pai</a></strong>,
+        <a href="https://shanhui.people.stanford.edu/">Shanhui Fan</a>,
+        <a href="https://web.stanford.edu/~solgaard/index.html">Olav Solgaard</a>,
+        <a href="https://dabm.stanford.edu">David AB Miller</a>
+        <br>
+        <em>arXiv</em>, 2023
+        <br>
+        <a href="https://arxiv.org/abs/2210.16935">arXiv</a>
+        <p></p>
+        <p>
+        A new mathematical framework for representing unitary and orthogonal matrices using binary tree cascades, useful for low-rank hardware implementations and representations.
         </p>
       </td>
     </tr>
