--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:sunilkpai93@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/SunilPai_CV.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/scv.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=orRndBUAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://x.com/sunilkpai?lang=en">X/Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/sunilkpai">Github</a> &nbsp;/&nbsp;
@@ -242,7 +242,7 @@
         <a href="https://web.stanford.edu/~solgaard/index.html">Olav Solgaard</a>,
         <a href="https://dabm.stanford.edu">David AB Miller</a>
         <br>
-        <em>JSTQE</em>, 2020
+        <em>IEEE Journal of Selected Topics in Quantum Electronics</em>, 2020
         <br>
         <a href="https://ieeexplore.ieee.org/document/9103211">paper</a>
         /
